# ibans

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
ibans/: __main__.py  app.py  asgi.py
ibans/api/v1/: router.py  schema.py
ibans/data/: rules.py
ibans/data/validation/: __init__.py  base.py  length.py  weighted.py
ibans/services/: iban.py
ibans/tests/api/v1/: test_validation.py
ibans/tests/services/: test_iban.py
