[tool.poetry]
name = "ibans"
version = "1.0.0"
description = "test assignment. IBAN validation service"
authors = ["Mikalai Kukhta <mikalai.kukhta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.68.1"
hypercorn = "0.11.2"
certifi = "^2021.5.30"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "21.9b0"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".venv/*", "*tests/*"]
